mon_ing.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: prometheus
      meta.helm.sh/release-namespace: monitoring
    creationTimestamp: "2024-06-18T03:01:03Z"
    generation: 3
    labels:
      app: kube-prometheus-stack-prometheus
      app.kubernetes.io/instance: prometheus
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 62.7.0
      chart: kube-prometheus-stack-62.7.0
      heritage: Helm
      release: prometheus
    name: prometheus-kube-prometheus-prometheus
    namespace: monitoring
    resourceVersion: "796717352"
    uid: e4fc54a9-49ab-4b04-99b8-c81c1e39930e
  spec:
    ingressClassName: internal-ingress-nginx
    rules:
    - host: aks-stint-prometheus.support.ingenuous.local
      http:
        paths:
        - backend:
            service:
              name: prometheus-kube-prometheus-prometheus
              port:
                number: 9090
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - aks-stint-prometheus.support.ingenuous.local
      secretName: tls-ingress-ingenuous-local
  status:
    loadBalancer:
      ingress:
      - ip: 10.11.3.10
kind: List
metadata:
  resourceVersion: ""
